Style changes to improve layout on smaller resolutions.  Minor tweaks to icons and display.  Fixed a bug with how stat mods are shown.

--- a/app/encounter.less
+++ b/app/encounter.less
@@ -16,6 +16,9 @@ body * {
     padding-top: 5px;
   }
 }
+md-dialog {
+  background-color: lightgray;
+}
 .combatant {
   @padding: 15px;
   @border-size: 4px;
@@ -28,43 +31,49 @@ body * {
   margin: 5px 10px;
   position:relative;
   clear:both;
-  /*min-width: 600px;*/
+  overflow:hidden;
   &.active {
+    -webkit-box-shadow: 1px 1px 6px 0px rgba(0,0,255,0.75);
+    -moz-box-shadow: 1px 1px 6px 0px rgba(0,0,255,0.75);
+    box-shadow: 1px 1px 6px 0px rgba(0,0,255,0.75);
     border-left: @border-size solid blue;
     padding-left: (@padding - @border-size);
   }
-  .hp {
-    font-weight:bold;
-    &.hp-warning {
-      color: red;
+  .info {
+    float:left;
+    .hp {
+      font-weight:bold;
+      &.hp-warning {
+        color: red;
+      }
+    }
+    .ac, .init {
+      font-weight:bold;
+      font-size: .8em;
+    }
+    .name {
+      font-weight: bold;
+      font-size: 18px;
+    }
+    .stats {
+      font-size:.8em;
+      .stat {
+        font-weight:600;
+        display:block;
+        float:left;
+        width: 75px;
+        margin-right:8px;
+      }
     }
   }
-  .ac, .init {
-    font-weight:bold;
-    font-size: .8em;
-  }
-  .name {
-    font-weight: bold;
-    font-size: 18px;
-  }
-  .stats {
-    /*height:20px;*/
-    font-size:.8em;
-    .stat {
-      font-weight:600;
-      display:block;
-      float:left;
-      width: 70px;
-      margin-right:8px;
-    }
+  .hpmod {
+    float:left;
   }
   .controls {
+    float:right;
     md-icon {
       outline: none;
       cursor: pointer;
     }
-  }
-  md-divider {
-    clear:both;
   }
 }
